--- a/build.gradle
+++ b/build.gradle
@@ -1,26 +1,27 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+apply plugin: 'com.android.application'
 
-buildscript {
-    repositories {
-        google()
-        jcenter()
-        
-    }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.0'
-        
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
-    }
-}
+android {
+    compileSdkVersion 29
 
-allprojects {
-    repositories {
-        google()
-        jcenter()
+    defaultConfig {
+        applicationId "com.u063.sqlcommands"
+        minSdkVersion 14
+        targetSdkVersion 29
+        versionCode 1
+        versionName "1.0"
+    }
+    buildTypes {
+        release {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
     }
 }
 
-task clean(type: Delete) {
-    delete rootProject.buildDir
+dependencies {
+	implementation fileTree(dir: 'libs', include: ['*.jar'])
+   	implementation 'androidx.appcompat:appcompat:1.0.0'
+   	implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+   	implementation 'com.google.android.material:material:1.0.0-rc01'
+    implementation 'androidx.cardview:cardview:1.0.0'
 }
